--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         versionCode 20181224
         versionName "3.1.2"
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86_64"
         }
         externalNativeBuild {
             cmake {
@@ -19,30 +19,48 @@ android {
         }
     }
 
+
+
     signingConfigs {
-       release {
-       }
+        release {
+            //配置keystore文件的各种信息
+
+            //加载本工程目录之外的资源，防止git缓存
+            Properties properties = new Properties()
+            // 请在本工程同级创建如下目录和编写下列文件名的properties文件，追加内容如下
+
+            //  KEY_PATH=签名key.keystore文件的绝对路径
+            //  KEY_PASS=key的密码
+            //  KEY_ALIAS_NAME=key的别名
+            //  KEY_ALIAS_PASS=别名的密码
+
+            InputStream inputStream = file('../../apk-private-properties/private.properties').newDataInputStream()
+            properties.load(inputStream)
+
+            //签名key文件
+            storeFile file(properties.getProperty('KEY_PATH'))
+            storePassword properties.getProperty('KEY_PASS')
+            keyAlias properties.getProperty('KEY_ALIAS_NAME')
+            keyPassword properties.getProperty('KEY_ALIAS_PASS')
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-android.txt'
+            // 禁用混淆
+            // proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            debuggable true
+            // 点击idea右侧的Gradle面板中的other/assembleRelease即可自动签名apk
+
+            // 禁止idea提示 Cannot infer arguments types
+            //noinspection GroovyAssignabilityCheck
             signingConfig signingConfigs.release
         }
-    }
 
-    def propsFile = rootProject.file('gradle.properties') //store release config in gradle.properties
-    def configName = 'release'
-
-    if (propsFile.exists() && android.signingConfigs.hasProperty(configName)) {
-        def props = new Properties()
-        props.load(new FileInputStream(propsFile))
-        if (props!=null && props.containsKey('storeFile')) {
-            android.signingConfigs[configName].storeFile = rootProject.file(props['storeFile'])
-            android.signingConfigs[configName].storePassword = props['storePassword']
-            android.signingConfigs[configName].keyAlias = props['keyAlias']
-            android.signingConfigs[configName].keyPassword = props['keyPassword']
+        debug {
+            //noinspection GroovyAssignabilityCheck
+            signingConfig signingConfigs.release
         }
     }
 
